Sat Nov 06 15:40:05 GMT 2004  Olly Betts <olly@survex.com>

	* xapian-config.in,m4/xapian.m4: Pass across ac_top_srcdir and use it
	  if provided to say "configure.ac" or "configure.in" rather than
	  "configure.in (or configure.ac)" in the "Add AC_PROG_LIBTOOL"
	  error message.

Sat Nov 06 14:49:05 GMT 2004  Olly Betts <olly@survex.com>

	* configure.ac: Updated comment - we now find SOURCEDOC in 2 goes (as
	  there are no longer any C sources).

Sat Nov 06 14:43:16 GMT 2004  Olly Betts <olly@survex.com>

	* configure.ac: Oops, STLPORT_CXXFLAGS *is* used (in xapian-config.in)
	  so revert the change which removes it.

Sat Nov 06 13:37:23 GMT 2004  Olly Betts <olly@survex.com>

	* include/xapian/enquire.h,matcher/bm25weight.cc,
	  matcher/tradweight.cc: Move virtual methods of BM25Weight and
	  TradWeight out of the header.

Sat Nov 06 13:19:32 GMT 2004  Olly Betts <olly@survex.com>

	* configure.ac,include/xapian/version.h.in: Another rework of how
	  include/xapian/version.h is generated - this time to make it work
	  with Sun's C++ compiler again; XAPIAN_VERSION is now a string;
	  Define XAPIAN_REVISION (which is 4 for version 0.8.4).

Sat Nov 06 04:22:57 GMT 2004  Olly Betts <olly@survex.com>

	* configure.ac: Don't AC_SUBST(STLPORT_CXXFLAGS) as it is never used
	  that way (it's included in AM_CXXFLAGS).

Sat Nov 06 01:03:53 GMT 2004  Olly Betts <olly@survex.com>

	* testsuite/testsuite.h: Removed incorrect comment about how STRINGIZE
	  is used.

Fri Nov 05 14:41:59 GMT 2004  Olly Betts <olly@survex.com>

	* include/xapian/database.h: Removed a default parameter value from one
	  variant of open_db so that there's only one candidate for
	  open_db(string).

Fri Nov 05 14:40:38 GMT 2004  Olly Betts <olly@survex.com>

	* backends/database.cc: Renamed parameter from keys to values to
	  reflect current external naming.

Fri Nov 05 14:38:07 GMT 2004  Olly Betts <olly@survex.com>

	* include/xapian/version.h.in,configure.ac: Fixed generation of